# beta-bundles-py

./: .env.example  .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yml  check-flake.yml
abis/: Auctioneer.json  MockBidder.json  OpenBidder.json  SettlementHouse.json
beta_bundles_py/: main.py
nix/: default.nix
nix/pkgs/: beta-bundles.nix
